<resources>
    <string name="app_name">TTluis</string>
    <string name="error_field_required">ESTE CAMPO ES REQUERIDO</string>

    <string name="dialog_title">Title</string>
    <string name="dialog_close">CERRAR</string>
    <string name="dialog_accept">ACEPTAR</string>
    <string name="dialog_yes">SI</string>
    <string name="dialog_no">NO</string>

    <string name="network_error">ERROR DE RED, VERIFIQUE SU CONEXIÓN O INTENTELO MÁS TARDE</string>
    <string name="label_error">ERROR DE RED</string>
    <string name="dialog_empty"></string>
    <string name="close_session_header">CERRAR SESIÓN</string>
    <string name="close_session_msg">¿ESTA SEGURO QUE DESEA CERRAR SESIÓN?</string>
    <string name="label_login_result">RESPUESTA DEL SERVIDOR</string>

    <string name="label_user">USUARIO</string>
    <string name="label_password">CONTRASEÑA</string>
    <string name="label_button_enter">INICIAR SESIÓN</string>
    <string name="order_info_header">DETALLES DE LA ORDEN : %s</string>
    <string name="order_info_ubicacion">DETALLES DE UBICACIÓN</string>
    <string name="order_info_users">SOLICITANTE / TÉCNICO</string>
    <string name="order_info_general">DATOS GENERALES</string>
    <string name="order_info_descs">OBSERVACIONES DE LA ORDEN</string>
    <string name="order_info_edificio">EDIFICIO : %s</string>
    <string name="order_info_piso">PISO : %s</string>
    <string name="order_info_sala">SALA : %s</string>

    <!-- Report States -->
    <string name="report_state_1">RESUELTO</string>
    <string name="report_state_2">ASIGNADO</string>
    <string name="report_state_3">SIN ASIGNAR</string>
    <string name="report_state_4">NO SE PUDO RESOLVER</string>

    <string name="cat_topappbar_lorem_ipsum" translatable="false">
        \t\tLorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris volutpat, dolor id
        interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus dui nec risus. Maecenas non sodales
        nisi, vel dictum dolor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos
        himenaeos. Suspendisse blandit eleifend diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet,
        imperdiet nisl a, ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.
        \n\n\t\tSuspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus egestas, est a
        condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed neque. Morbi tellus erat, dapibus ut
        sem a, iaculis tincidunt dui. Interdum et malesuada fames ac ante ipsum primis in faucibus. Curabitur et eros
        porttitor, ultricies urna vitae, molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl
        nec dolor bibendum, vel congue leo egestas.
        \n\n\t\tSed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit amet auctor
        at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel, molestie quam. Fusce blandit
        tincidunt nulla, quis sollicitudin libero facilisis et. Integer interdum nunc ligula, et fermentum metus
        hendrerit id. Vestibulum lectus felis, dictum at lacinia sit amet, tristique id quam. Cras eu consequat dui.
        Suspendisse sodales nunc ligula, in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a
        pellentesque est.
        \n\n\t\tAenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh. Morbi laoreet,
        tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui non lorem. Nam mollis ipsum quis
        auctor varius. Quisque elementum eu libero sed commodo. In eros nisl, imperdiet vel imperdiet et, scelerisque a
        mauris. Pellentesque varius ex nunc, quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt.
        Sed non viverra ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus convallis.
        \n\n\t\tPhasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac
        turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa gravida. Pellentesque id tellus orci.
        Integer dictum, lorem sed efficitur ullamcorper, libero justo consectetur ipsum, in mollis nisl ex sed nisl.
        Donec maximus ullamcorper sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec
        rhoncus libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus vestibulum.
        Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
