<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:id="@+id/reportstates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/borderGray"
            app:layout_constraintTop_toTopOf="parent"
    >

        <TextView
                android:id="@+id/state1"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@string/report_state_1"
                android:padding="8dp"
                android:textSize="@dimen/text_10"
                android:gravity="center"
                android:background="@drawable/border_right_bottom"
                android:drawableLeft="@drawable/grenn_square"
                android:layout_weight="0.25"/>

        <TextView
                android:id="@+id/state2"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@string/report_state_2"
                android:padding="8dp"
                android:gravity="center"
                android:textSize="@dimen/text_10"
                android:background="@drawable/border_right_bottom"
                android:drawableLeft="@drawable/yellow_square"
                android:layout_weight="0.25"/>

        <TextView
                android:id="@+id/state3"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:drawableLeft="@drawable/gray_square"
                android:gravity="center"
                android:padding="8dp"
                android:textSize="@dimen/text_10"
                android:background="@drawable/border_right_bottom"
                android:text="@string/report_state_3"
                android:layout_weight="0.25"
        />
        <TextView
                android:id="@+id/state4"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:drawableLeft="@drawable/red_square"
                android:gravity="center"
                android:padding="8dp"
                android:textSize="@dimen/text_10"
                android:text="@string/report_state_4"
                android:layout_weight="0.25"
        />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvOrders"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/dimen_8"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/reportstates"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
    />

    <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/colorPrimary"
            app:itemIconTint="@color/white"
            app:itemTextColor="@color/white"
            style="@style/Widget.Design.BottomNavigationView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:menu="@menu/menu" />

</androidx.constraintlayout.widget.ConstraintLayout>