<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.order_info.OrderInfo">

    <ScrollView android:fillViewport="true" android:layout_width="match_parent" android:layout_height="match_parent" app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                           android:layout_height="wrap_content">

            <LinearLayout
                    android:id="@+id/header"
                    app:layout_constraintTop_toTopOf="parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:background="@color/medium_gray"
                    android:layout_width="match_parent" android:layout_height="wrap_content">
                <ImageView
                        android:src="@drawable/ic_order"
                        android:layout_margin="@dimen/dimen_8"
                        android:layout_width="100dp" android:layout_height="100dp"/>
                <TextView
                        android:id="@+id/orderfolio"
                        android:text="@string/order_info_header"
                        android:layout_margin="@dimen/dimen_8"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"/>

            </LinearLayout>

            <TextView
                    android:id="@+id/header2"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:text="@string/order_info_ubicacion"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_margin="@dimen/dimen_8"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/header"/>

            <LinearLayout
                    android:id="@+id/infodep"
                    app:layout_constraintTop_toBottomOf="@id/header2"
                    android:orientation="horizontal"
                    android:layout_width="match_parent" android:layout_height="wrap_content">
                <com.google.android.material.card.MaterialCardView
                        android:id="@+id/deptosect"
                        android:layout_weight="0.5"
                        android:layout_margin="@dimen/dimen_10"
                        android:layout_width="0dp"
                        android:elevation="4dp"
                        app:cardCornerRadius="4dp"
                        app:strokeColor="@color/color2"
                        app:strokeWidth="1dp"
                        android:layout_height="fill_parent">

                    <LinearLayout android:layout_margin="@dimen/dimen_8" android:layout_width="match_parent" android:layout_height="wrap_content" android:gravity="center" android:orientation="vertical"
                    >
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="DEPARTAMENTO"/>
                        <TextView android:id="@+id/dept" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="MATEMATICAS"/>
                        <ImageView android:layout_margin="4dp" android:layout_width="45dp" android:layout_height="45dp" android:src="@drawable/ic_flats"/>
                        <TextView android:id="@+id/edifdepto" android:layout_width="wrap_content" android:layout_height="wrap_content"
                                  android:layout_gravity="left"
                                  android:text="@string/order_info_edificio"
                        />
                        <View android:layout_width="match_parent" android:layout_height="1px" android:background="?android:attr/dividerHorizontal" />
                        <TextView android:id="@+id/pisodepto" android:layout_width="wrap_content" android:layout_height="wrap_content"
                                  android:layout_gravity="left"
                                  android:text="@string/order_info_piso"
                        />
                        <View android:layout_width="match_parent" android:layout_height="1px" android:background="?android:attr/dividerHorizontal" />
                        <TextView android:id="@+id/saladepto" android:layout_width="wrap_content" android:layout_height="wrap_content"
                                  android:layout_gravity="left"
                                  android:text="@string/order_info_sala"
                        />

                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                        android:id="@+id/subdeptosect"
                        android:layout_weight="0.5"
                        android:layout_margin="@dimen/dimen_10"
                        android:layout_width="0dp"
                        android:elevation="4dp"
                        app:cardCornerRadius="4dp"
                        app:strokeColor="@color/color2"
                        app:strokeWidth="1dp"
                        android:layout_height="fill_parent">

                    <LinearLayout android:layout_margin="@dimen/dimen_8" android:layout_width="match_parent" android:layout_height="wrap_content" android:gravity="center" android:orientation="vertical"
                    >
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="SUBDEPARTAMENTO"/>
                        <TextView android:id="@+id/subdept" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="INGENIERIA"/>
                        <ImageView android:layout_margin="4dp" android:layout_width="45dp" android:layout_height="45dp" android:src="@drawable/ic_office"/>
                        <TextView android:id="@+id/edifsub" android:layout_width="wrap_content" android:layout_height="wrap_content"
                                  android:layout_gravity="left"
                                  android:text="@string/order_info_edificio"
                        />
                        <View android:layout_width="match_parent" android:layout_height="1px" android:background="?android:attr/dividerHorizontal" />
                        <TextView android:id="@+id/pisosub" android:layout_width="wrap_content" android:layout_height="wrap_content"
                                  android:layout_gravity="left"
                                  android:text="@string/order_info_piso"
                        />
                        <View android:layout_width="match_parent" android:layout_height="1px" android:background="?android:attr/dividerHorizontal" />
                        <TextView android:id="@+id/salasub" android:layout_width="wrap_content" android:layout_height="wrap_content"
                                  android:layout_gravity="left"
                                  android:text="@string/order_info_sala"
                        />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

            <TextView
                    android:id="@+id/header3"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:text="@string/order_info_users"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_margin="@dimen/dimen_8"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/infodep"/>

            <LinearLayout
                    android:id="@+id/infousers"
                    app:layout_constraintTop_toBottomOf="@id/header3"
                    android:orientation="horizontal"
                    android:layout_width="match_parent" android:layout_height="wrap_content">
                <com.google.android.material.card.MaterialCardView
                        android:id="@+id/docente"
                        android:layout_weight="0.5"
                        android:layout_margin="@dimen/dimen_10"
                        android:layout_width="0dp"
                        android:elevation="4dp"
                        app:cardCornerRadius="4dp"
                        app:strokeColor="@color/color3"
                        app:strokeWidth="1dp"
                        android:layout_height="fill_parent">

                    <LinearLayout android:layout_margin="@dimen/dimen_8" android:layout_width="match_parent" android:layout_height="wrap_content" android:gravity="center" android:orientation="vertical"
                    >
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="DOCENTE"/>
                        <ImageView android:layout_margin="4dp" android:layout_width="45dp" android:layout_height="45dp" android:src="@drawable/ic_teacher"/>
                        <TextView android:id="@+id/doc" android:layout_width="wrap_content" android:layout_height="wrap_content"
                                  android:layout_gravity="left"
                                  android:text="juan"
                        />


                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                        android:id="@+id/tecnico"
                        android:layout_weight="0.5"
                        android:layout_margin="@dimen/dimen_10"
                        android:layout_width="0dp"
                        android:elevation="4dp"
                        app:cardCornerRadius="4dp"
                        app:strokeColor="@color/color3"
                        app:strokeWidth="1dp"
                        android:layout_height="fill_parent">

                    <LinearLayout android:layout_margin="@dimen/dimen_8" android:layout_width="match_parent" android:layout_height="wrap_content" android:gravity="center" android:orientation="vertical"
                    >
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="TÉCNICO"/>
                        <ImageView android:layout_margin="4dp" android:layout_width="45dp" android:layout_height="45dp" android:src="@drawable/ic_engineer"/>
                        <TextView android:id="@+id/tec" android:layout_width="wrap_content" android:layout_height="wrap_content"
                                  android:layout_gravity="left"
                                  android:text="juan"
                        />

                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

            <TextView
                    android:id="@+id/header4"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:text="@string/order_info_general"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_margin="@dimen/dimen_8"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/infousers"/>

            <com.google.android.material.card.MaterialCardView
                    android:id="@+id/generaldata"
                    android:layout_margin="@dimen/dimen_10"
                    android:layout_width="match_parent"
                    android:elevation="4dp"
                    app:cardCornerRadius="4dp"
                    app:layout_constraintTop_toBottomOf="@id/header4"
                    app:layout_constraintStart_toStartOf="parent"
                    app:strokeColor="@color/color4"
                    app:strokeWidth="1dp"
                    android:layout_height="wrap_content">

                <LinearLayout android:layout_margin="@dimen/dimen_8" android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical"
                >
                    <TextView
                            android:layout_margin="@dimen/dimen_8"
                            android:drawableLeft="@drawable/ic_maps_and_flags"
                            android:drawablePadding="@dimen/dimen_8"
                            android:id="@+id/state" android:layout_width="wrap_content" android:layout_height="wrap_content"
                              android:text="juan"
                    />
                    <View android:layout_width="match_parent" android:layout_height="1px" android:background="?android:attr/dividerHorizontal" />

                    <TextView
                            android:layout_margin="@dimen/dimen_8"
                            android:drawableLeft="@drawable/ic_calendar_start"
                            android:drawablePadding="@dimen/dimen_8"
                            android:id="@+id/ini" android:layout_width="wrap_content" android:layout_height="wrap_content"
                            android:text="juan"
                    />
                    <View android:layout_width="match_parent" android:layout_height="1px" android:background="?android:attr/dividerHorizontal" />

                    <TextView
                            android:layout_margin="@dimen/dimen_8"
                            android:drawableLeft="@drawable/ic_calendar"
                            android:drawablePadding="@dimen/dimen_8"
                            android:id="@+id/fin" android:layout_width="wrap_content" android:layout_height="wrap_content"
                            android:text="juan"
                    />
                    <View android:layout_width="match_parent" android:layout_height="1px" android:background="?android:attr/dividerHorizontal" />

                    <TextView
                            android:layout_margin="@dimen/dimen_8"
                            android:drawableLeft="@drawable/ic_responsive"
                            android:drawablePadding="@dimen/dimen_8"
                            android:id="@+id/equip" android:layout_width="wrap_content" android:layout_height="wrap_content"
                            android:text="juan"
                    />
                    <View android:layout_width="match_parent" android:layout_height="1px" android:background="?android:attr/dividerHorizontal" />

                    <TextView
                            android:layout_margin="@dimen/dimen_8"
                            android:drawableLeft="@drawable/ic_technical_support"
                            android:drawablePadding="@dimen/dimen_8"
                            android:id="@+id/work" android:layout_width="wrap_content" android:layout_height="wrap_content"
                            android:text="juan"
                    />
                    <View android:layout_width="match_parent" android:layout_height="1px" android:background="?android:attr/dividerHorizontal" />



                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>


            <TextView
                    android:id="@+id/header5"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:text="@string/order_info_descs"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_margin="@dimen/dimen_8"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/generaldata"/>

            <LinearLayout
                    android:id="@+id/descs"
                    app:layout_constraintTop_toBottomOf="@id/header5"
                    android:orientation="horizontal"
                    android:layout_width="match_parent" android:layout_height="wrap_content">
                <com.google.android.material.card.MaterialCardView
                        android:layout_weight="0.5"
                        android:layout_margin="@dimen/dimen_10"
                        android:layout_width="0dp"
                        android:elevation="4dp"
                        app:cardCornerRadius="4dp"
                        app:strokeColor="@color/color4"
                        app:strokeWidth="1dp"
                        android:layout_height="fill_parent">

                    <LinearLayout android:layout_margin="@dimen/dimen_8" android:layout_width="match_parent" android:layout_height="wrap_content" android:gravity="center" android:orientation="vertical"
                    >
                        <TextView  android:textAlignment="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="OBSERVACIONES DOCENTE"/>
                        <TextView android:id="@+id/obsdoc" android:layout_width="wrap_content" android:layout_height="wrap_content"
                                  android:layout_gravity="left"
                                  android:text="juan"
                        />


                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                        android:layout_weight="0.5"
                        android:layout_margin="@dimen/dimen_10"
                        android:layout_width="0dp"
                        android:elevation="4dp"
                        app:cardCornerRadius="4dp"
                        app:strokeColor="@color/color4"
                        app:strokeWidth="1dp"
                        android:layout_height="fill_parent">

                    <LinearLayout android:layout_margin="@dimen/dimen_8" android:layout_width="match_parent" android:layout_height="wrap_content" android:gravity="center" android:orientation="vertical"
                    >
                        <TextView  android:textAlignment="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="OBSERVACIONES TÉCNICO"/>
                        <TextView android:id="@+id/obstec" android:layout_width="wrap_content" android:layout_height="wrap_content"
                                  android:layout_gravity="left"
                                  android:text="juan"
                        />

                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>

